--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kim Pykhov Web-Page</title>
     <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="../../public/css/night-vision.css">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">      
     <style>
@@ -42,11 +43,12 @@
             <h1>Kim Pykhov Web-Page</h1>
         </div>
         <div class="social-icons">
-            <a href="https://www.instagram.com/mr_morou/?igsh=MWthdW8yZHQ1N3pnag%3D%3D" target="_blank"><i
-                    class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/kim-pykhov-0a2aa9196/" target="_blank"><i
-                    class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/mr_morou/?igsh=MWthdW8yZHQ1N3pnag%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/kim-pykhov-0a2aa9196/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/kimpykhov/saucedemo" target="_blank"><i class="fab fa-github"></i></a>
+            <button onclick="toggleDarkMode(this.classList.toggle('dark'))">
+                Dark Theme
+            </button>
         </div>
     </header>
 
@@ -74,6 +76,6 @@
     </footer>
   
     <script src="../../public/js/game.js"></script>
-
+    <script src="../../public/js/night_vision.js"></script>
 </body>
 </html>
