--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kim Pykhov Web-Page</title>
     <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="../../public/css/night-vision.css">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -39,11 +40,12 @@
                 <h1>Kim Pykhov Web-Page</h1>
             </div>
             <div class="social-icons">
-                <a href="https://www.instagram.com/mr_morou/?igsh=MWthdW8yZHQ1N3pnag%3D%3D" target="_blank"><i
-                        class="fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/kim-pykhov-0a2aa9196/" target="_blank"><i
-                        class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/mr_morou/?igsh=MWthdW8yZHQ1N3pnag%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/kim-pykhov-0a2aa9196/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/kimpykhov/saucedemo" target="_blank"><i class="fab fa-github"></i></a>
+                <button onclick="toggleDarkMode(this.classList.toggle('dark'))">
+                    Dark Theme
+                </button>
             </div>
         </header>
 
@@ -315,6 +317,7 @@
         <script src="../../public/js/modal.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>AOS.init();</script>
+        <script src="../../public/js/night_vision.js"></script>
     </div>
 </body>
 
