added HTML structure for a blog page

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -39,12 +39,40 @@
 
     <hr>
 
-    <div class="blog" id="blog">  
-        <div class="blog-list">
-            Mock
-        </div>
-        <div class="blog-content">
-            Content Mock
+    <div class="section-block" id="blog">  
+        <div class="blog">
+            <div class="blog-list">
+                <h4>Theme</h4>
+                <div class="filtering">
+                    <div>
+                        <input type="checkbox" id="api" name="api">
+                        <label for="api">API</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="manual" name="manual">
+                        <label for="manual">Manual testing</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="automation" name="automation">
+                        <label for="automation">Automation</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="leadership" name="leadership">
+                        <label for="leadership">Leadership</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="blog-content">
+                <h4>Records</h4>
+                <div class="content" id="api">api</div>
+                <hr>
+                <div class="content" id="manual">manual</div>
+                <hr>
+                <div class="content" id="automation">automation</div>
+                <hr>
+                <div class="content" id="leadership">leadership</div>
+            </div>
         </div>      
     </div>
 
