--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -45,19 +45,19 @@
                 <h4>Theme</h4>
                 <div class="filtering">
                     <div>
-                        <input type="checkbox" id="api" name="api">
+                        <input type="checkbox" id="api" name="theme" value="api">
                         <label for="api">API</label>
                     </div>
                     <div>
-                        <input type="checkbox" id="manual" name="manual">
+                        <input type="checkbox" id="manual" name="theme" value="manual">
                         <label for="manual">Manual testing</label>
                     </div>
                     <div>
-                        <input type="checkbox" id="automation" name="automation">
+                        <input type="checkbox" id="automation" name="theme" value="automation">
                         <label for="automation">Automation</label>
                     </div>
                     <div>
-                        <input type="checkbox" id="leadership" name="leadership">
+                        <input type="checkbox" id="leadership" name="theme" value="leadership">
                         <label for="leadership">Leadership</label>
                     </div>
                 </div>
@@ -65,13 +65,13 @@
 
             <div class="blog-content">
                 <h4>Records</h4>
-                <div class="content" id="api">api</div>
+                <div class="content api">api</div>
                 <hr>
-                <div class="content" id="manual">manual</div>
+                <div class="content manual">manual</div>
                 <hr>
-                <div class="content" id="automation">automation</div>
+                <div class="content automation">automation</div>
                 <hr>
-                <div class="content" id="leadership">leadership</div>
+                <div class="content leadership">leadership</div>
             </div>
         </div>      
     </div>
@@ -87,5 +87,6 @@
         </div>    
     </footer>
     <script src="../../public/js/night_vision.js"></script>
+    <script src="../../public/js/sortByValue.js"></script>
 </body>
 </html>
